[gd_scene load_steps=12 format=2]

[ext_resource path="res://img/bg.png" type="Texture" id=1]
[ext_resource path="res://img/bgBorderTop.png" type="Texture" id=2]
[ext_resource path="res://img/bgBorderBottom.png" type="Texture" id=3]
[ext_resource path="res://Intro.gd" type="Script" id=4]
[ext_resource path="res://img/baloon_orange.fw.png" type="Texture" id=5]
[ext_resource path="res://img/baloon_pop1.fw.png" type="Texture" id=6]
[ext_resource path="res://img/baloon_pop2.fw.png" type="Texture" id=7]
[ext_resource path="res://img/baloon_pop3.fw.png" type="Texture" id=8]
[ext_resource path="res://audio/boom.tres" type="AudioStream" id=12]

[sub_resource type="Animation" id=1]
resource_name = "New Anim"
length = 3.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("PanelContainer/baloon_orangefw:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 366.112, -0.25, 0, 0.25, 0, 192.112, -0.25, 0, 0.25, 0, 458.112, -0.25, 0, 0.25, 0, 354.112, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.2, 2.3, 3.3 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("PanelContainer/baloon_orangefw:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 729.663, -0.25, 0, 0.25, 0, 471.663, -0.25, 0, 0.25, 0, 369.663, -0.25, 0, 0.25, 0, 239.663, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.2, 2.3, 3.3 )
}

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": false,
"name": "default",
"speed": 10.0
} ]

[node name="Intro" type="Node2D"]
position = Vector2( 1.8877, -5.66324 )
z_as_relative = false
script = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/New Anim" = SubResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -10.0

[node name="PanelContainer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 800.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bgBorderTop" type="Sprite" parent="PanelContainer"]
position = Vector2( -1.8877, -90.3368 )
scale = Vector2( 1.65975, 0.805556 )
texture = ExtResource( 2 )
centered = false

[node name="bgBorderBottom" type="Sprite" parent="PanelContainer"]
position = Vector2( -1.8877, 645.663 )
scale = Vector2( 1.65975, 0.888889 )
texture = ExtResource( 3 )
centered = false

[node name="baloon_orangefw" type="AnimatedSprite" parent="PanelContainer"]
position = Vector2( 354.112, 239.663 )
z_index = 1
frames = SubResource( 2 )
centered = false

[node name="bg" type="Sprite" parent="PanelContainer"]
position = Vector2( -1.8877, -0.33676 )
scale = Vector2( 1.66667, 0.7675 )
texture = ExtResource( 1 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="PanelContainer/baloon_orangefw" to="." method="_on_baloon_orangefw_animation_finished"]
